assets/css/about.css
/* Base CSS Start */
@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;700&family=Roboto+Slab:wght@300;500;700&family=Roboto:wght@300;500;700&display=swap');

/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

/* Base Recipes Page */

/* Fonts
font-family: 'Dancing Script', cursive;
font-family: 'Roboto Slab', serif;
font-family: 'Roboto', sans-serif;*/


/* Main Container */
html {
    font-size: 62.5%;
    box-sizing: border-box;
}

​ *,
*:before,
*:after {
    box-sizing: inherit;
}

body {
    font-family: 'Roboto', sans-serif;
    font-size: 1.75rem;
    font-weight: 300;
    color: #4f4f4f;
}

.container {
    width: 100%;
    margin: auto;
}

/* Basic Styling */
a {
    display: inline-block;
    text-decoration: none;
}

h2,
h3,
h4,
h5,
h6 {
    font-family: 'Roboto Slab', serif;
    font-weight: 700;
}

h1 {
    font-size: 10rem;
    padding-top: 3%;
}

h2 {
    font-size: 3rem;
    margin-bottom: 2%;
}

h3 {
    font-size: 2rem;
}

h4 {
    font-size: 1.75rem;
}

h5 {
    font-size: 1.5rem;
}

p {
    line-height: 2rem;
    letter-spacing: .2rem;
    padding: 0 2%;
    margin: 2% 0;
}

/* Color Palette Light to Dark
ffffff
e5e5e5
fca311
14213d
4f4f4f
*/


/* Header Styles */
.logo {
    font-weight: 700;
    background-color: #14213d;
    color: #fff;
    font-family: 'Dancing Script', cursive;
    text-align: center;
}


.nav-border {
    height: 3vh;
    background-color: #FCA311;
}

nav {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    background-color: #14213d;
    height: 20vh;
}

/* About Page Intro Styles */
.about-intro {
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: flex-start;
    padding: 4% 2%;
    background-color: #e5e5e5;
}

.about-intro .about-intro-title {
    margin-left: 2%;
}

/* About Page Content with Images Styles */
.about-contentbox {
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    padding: 4% 2%;
    background-color: #e5e5e5;
}

.about-contentbox div {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    height: 45vh;
    margin: 2% 2%;
    text-shadow: 2px 2px 2px #000;
    text-align: left;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-direction: column;
}

.about-contentbox div:hover {
    transition: 1.5s ease-in-out;
    filter: grayscale(100%);
    border: 4px solid #fca311;
    flex-grow: 3;
}

.hidden {
    visibility: hidden;
}

.about-contentbox div:hover .hidden {
    visibility: visible;
}

.about-person {
    border-radius: 10px;
    box-shadow: 5px 5px 30px #4f4f4f;
    color: #e5e5e5;
}

.about-person.team1 {
    background: url(https://ca.slack-edge.com/ESZCHB482-W013NQ2U1F1-c896d4be006d-512);
    background-size: cover;
}

.team1 h2,
.team1 h3 {
    margin: 2%;
}

.about-person.team2 {
    background: url(https://ca.slack-edge.com/ESZCHB482-W012JUU4BJN-af56f96d9fe3-512);
    background-size: cover;
}

.team2 h2,
.team2 h3 {
    margin: 2%;
}

.about-person.team3 {
    background: url(https://ca.slack-edge.com/ESZCHB482-W017FGSH97Y-ec6646aa713d-512);
    background-size: cover;
}

.team3 h2,
.team3 h3 {
    margin: 2%;
}

.about-person.team4 {
    background-image: url('../images/about/Brendan_Lai-Tong.png');
    background-size: cover;
}

.team4 h2,
.team4 h3 {
    margin: 2%;
}

.about-person.team5 {
    background: url(https://ca.slack-edge.com/ESZCHB482-W0198A5N8M8-3b32f0208c1f-512);
    background-size: cover;
}

.team5 h2,
.team5 h3 {
    margin: 2%;
}

.about-person.team6 {
    background: url(https://ca.slack-edge.com/ESZCHB482-W0138D1DZ0Q-37a2a49c4e05-512);
    background-size: cover;
}

.team6 h2,
.team6 h3 {
    margin: 2%;
}



/* Footer Styles */
footer {
    height: 30vh;
}

.copyright {
    height: 10vh;
    background-color: #fca311;
    font-size: 1.2rem;
    padding: 2.5%;
    text-align: center;
}

/* Buttons and Images */
.btn {
    font-size: 2rem;
    padding: 1%;
    color: #E5E5E5;
    margin: 2% 2%;
}

.btn:hover {
    color: #FCA311;
    transition: 2s;
}



/* Media Queries */

/* desktop */
@media (max-width: 1024px) {
    .about-contentbox div {
        width: 46%;
    }
}

/* tablet */
@media (max-width: 800px) {
    h1 {
        font-size: 7rem;
        padding: 4% 0;
    }

    .about-contentbox div {
        width: 70%;
    }

    .about-contentbox {
        justify-content: center;
    }

    .about-contentbox div:hover {
        transition: none;
        flex-grow: 0;
    }
}

/* mobile */
@media (max-width: 500px) {
    h1 {
        font-size: 5rem;
        padding: 4% 0;
    }

    h2 {
        font-size: 2rem;
        padding: 4% 0;
    }

    nav {
        flex-flow: column nowrap;
        align-content: center;
        justify-content: center;
        padding: 20% 4%;
    }

    nav a {
        width: 100%;
    }

    .about-contentbox div {
        width: 100%;
    }
}

